@@ -35,7 +35,7 @@ public class CaseDataTypeOfOrderElementsMapper {
     private static final String STOP_OTHER_DOING_SOMETHING = "stopOtherPeopleDoingSomething";
     private static final String RESOLVE_SPECIFIC_ISSUE = "resolveSpecificIssue";
 
-    public static void updateTypeOfOrderElementsForCaseData(CaseData.CaseDataBuilder caseDataBuilder,
+    public static void updateTypeOfOrderElementsForCaseData(CaseData.CaseDataBuilder<?,?> caseDataBuilder,
                                                       C100RebuildCourtOrderElements c100RebuildCourtOrderElements) {
         caseDataBuilder
                 .ordersApplyingFor(buildOrdersApplyingFor(c100RebuildCourtOrderElements))
@@ -48,12 +48,12 @@ public class CaseDataTypeOfOrderElementsMapper {
         List<String> prohibitedOrderList = nonNull(c100RebuildCourtOrderElements.getReasonsOfHearingWithoutNotice())
                 ? Arrays.stream(c100RebuildCourtOrderElements.getReasonsOfHearingWithoutNotice())
                 .map(element -> CourtOrderTypeEnum.valueOf(element).getDisplayedValue())
-                        .collect(Collectors.toList()) : Collections.emptyList();
+                        .toList() : Collections.emptyList();
 
         List<String> specificIssueOrderList = nonNull(c100RebuildCourtOrderElements.getResolveSpecificIssueSubField())
                 ? Arrays.stream(c100RebuildCourtOrderElements.getResolveSpecificIssueSubField())
                 .map(element -> CourtOrderTypeEnum.valueOf(element).getDisplayedValue())
-                        .collect(Collectors.toList()) : Collections.emptyList();
+                        .toList() : Collections.emptyList();
 
         String natureOfOrder = Stream.concat(prohibitedOrderList.stream(), specificIssueOrderList.stream())
                 .collect(Collectors.joining(COMMA_SEPARATOR));
