@@ -16,7 +16,6 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.apache.logging.log4j.util.Strings.concat;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FAMILY_COURT_TYPE_ID;
@@ -29,6 +28,8 @@ public class LocationRefDataService {
     public static final String LOCATION_REFERENCE_DATA_LOOKUP_FAILED = "Location Reference Data Lookup Failed - ";
     private final AuthTokenGenerator authTokenGenerator;
     private final LocationRefDataApi locationRefDataApi;
+
+    public static final String SCOTLAND = "Scotland";
 
     @Value("${courts.filter}")
     protected String courtsToFilter;
@@ -45,7 +46,7 @@ public class LocationRefDataService {
             );
             return onlyEnglandAndWalesLocations(courtDetails).stream()
                 .sorted(Comparator.comparing(m -> m.getLabel(), Comparator.naturalOrder()))
-                .collect(Collectors.toList());
+                .toList();
         } catch (Exception e) {
             log.error(LOCATION_REFERENCE_DATA_LOOKUP_FAILED + e.getMessage(), e);
         }
@@ -59,7 +60,7 @@ public class LocationRefDataService {
                 authTokenGenerator.generate(),
                 SERVICE_ID
             );
-            return daOnlyEnglandAndWalesLocations(courtDetails, "FL401");
+            return daOnlyEnglandAndWalesLocations(courtDetails);
         } catch (Exception e) {
             log.error(LOCATION_REFERENCE_DATA_LOOKUP_FAILED + e.getMessage(), e);
         }
@@ -94,12 +95,12 @@ public class LocationRefDataService {
         return List.of(DynamicListElement.builder().build());
     }
 
-    private List<DynamicListElement> daOnlyEnglandAndWalesLocations(CourtDetails locationRefData, String caseType) {
+    private List<DynamicListElement> daOnlyEnglandAndWalesLocations(CourtDetails locationRefData) {
         String[] courtList = daCourtsToFilter.split(",");
 
         return (locationRefData == null
             ? new ArrayList<>()
-            : locationRefData.getCourtVenues().stream().filter(location -> !"Scotland".equals(location.getRegion()))
+            : locationRefData.getCourtVenues().stream().filter(location -> !SCOTLAND.equals(location.getRegion()))
             .filter(location -> FAMILY_COURT_TYPE_ID.equalsIgnoreCase(location.getCourtTypeId()))
             .filter(location -> {
                 if (courtList.length == 1) {
@@ -107,10 +108,10 @@ public class LocationRefDataService {
                 }
                 List<String> ids = Arrays.stream(courtList).map(ele -> Arrays.stream(ele.split(":")).toArray()[0]
                     .toString())
-                    .collect(Collectors.toList());
+                    .toList();
                 return ids.contains(location.getCourtEpimmsId());
             })
-            .map(this::getDaDisplayEntry).collect(Collectors.toList()));
+            .map(this::getDaDisplayEntry).toList());
     }
 
     private DynamicListElement getDaDisplayEntry(CourtVenue location) {
@@ -135,7 +136,7 @@ public class LocationRefDataService {
 
         return (locationRefData == null
             ? new ArrayList<>()
-            : locationRefData.getCourtVenues().stream().filter(location -> !"Scotland".equals(location.getRegion()))
+            : locationRefData.getCourtVenues().stream().filter(location -> !SCOTLAND.equals(location.getRegion()))
             .filter(location -> FAMILY_COURT_TYPE_ID.equalsIgnoreCase(location.getCourtTypeId()))
             .filter(location -> {
                 if (courtList.length == 1) {
@@ -143,10 +144,10 @@ public class LocationRefDataService {
                 }
                 List<String> ids = Arrays.stream(courtList).map(ele -> Arrays.stream(ele.split(":")).toArray()[0]
                     .toString())
-                    .collect(Collectors.toList());
+                    .toList();
                 return ids.contains(location.getCourtEpimmsId());
             })
-            .map(this::getDisplayEntry).collect(Collectors.toList()));
+            .map(this::getDisplayEntry).toList());
     }
 
     private List<DynamicListElement> filterOnboardedCourtList(String courtList, CourtDetails locationRefData) {
@@ -160,7 +161,7 @@ public class LocationRefDataService {
             .filter(location -> {
                 List<String> ids = Arrays.stream(filteredCourtArray).map(ele -> Arrays.stream(ele.split(":")).toArray()[0]
                         .toString()).toList();
-                return !"Scotland".equals(location.getRegion()) && ids.contains(location.getCourtEpimmsId())
+                return !SCOTLAND.equals(location.getRegion()) && ids.contains(location.getCourtEpimmsId())
                     && FAMILY_COURT_TYPE_ID.equalsIgnoreCase(location.getCourtTypeId());
             })
             .map(this::getDisplayEntry).toList());
@@ -192,7 +193,7 @@ public class LocationRefDataService {
         );
         return  (null == courtDetails || null == courtDetails.getCourtVenues())
             ? Optional.empty()
-            : courtDetails.getCourtVenues().stream().filter(location -> !"Scotland".equals(
+            : courtDetails.getCourtVenues().stream().filter(location -> !SCOTLAND.equals(
                 location.getRegion()))
             .filter(location -> FAMILY_COURT_TYPE_ID.equalsIgnoreCase(location.getCourtTypeId()))
             .filter(location -> baseLocationId.equalsIgnoreCase(location.getCourtEpimmsId()))
