@@ -12,7 +12,7 @@ import uk.gov.hmcts.reform.prl.models.complextypes.TypeOfApplicationOrders;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.tasklist.Task;
 import uk.gov.hmcts.reform.prl.models.tasklist.TaskSection;
-import uk.gov.hmcts.reform.prl.services.validators.EventsChecker;
+import uk.gov.hmcts.reform.prl.services.validators.eventschecker.EventsChecker;
 
 import java.util.Collections;
 import java.util.LinkedList;
@@ -25,7 +25,6 @@ import static java.lang.String.format;
 import static java.util.Collections.emptyList;
 import static java.util.Optional.ofNullable;
 import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ADD_ADDITIONAL_INFORMATION;
@@ -33,6 +32,7 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ADD_APPLICATION
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ADD_PEOPLE_TO_THE_CASE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ONLY_COMPLETE_IF_RELEVANT;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V3;
 import static uk.gov.hmcts.reform.prl.enums.Event.ALLEGATIONS_OF_HARM;
 import static uk.gov.hmcts.reform.prl.enums.Event.ALLEGATIONS_OF_HARM_REVISED;
 import static uk.gov.hmcts.reform.prl.enums.Event.APPLICANT_DETAILS;
@@ -55,6 +55,7 @@ import static uk.gov.hmcts.reform.prl.enums.Event.HEARING_URGENCY;
 import static uk.gov.hmcts.reform.prl.enums.Event.INTERNATIONAL_ELEMENT;
 import static uk.gov.hmcts.reform.prl.enums.Event.LITIGATION_CAPACITY;
 import static uk.gov.hmcts.reform.prl.enums.Event.MIAM;
+import static uk.gov.hmcts.reform.prl.enums.Event.MIAM_POLICY_UPGRADE;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE_REVISED;
@@ -84,6 +85,11 @@ public class TaskListRenderer {
     private static final String IN_PROGRESS = "in-progress.png";
     private static final String INFORMATION_ADDED = "information-added.png";
     private static final String FINISHED = "finished.png";
+    public static final String ADD_REQUIRED_DETAILS = "Add required details";
+    public static final String MIAM_DETAILS = "MIAM details";
+    public static final String VIEW_PDF_APPLICATION = "View PDF application";
+    public static final String SUBMIT1 = "Submit";
+    public static final String SUBMIT_AND_PAY_TEXT = "Submit and pay";
 
     private final TaskListRenderElements taskListRenderElements;
 
@@ -108,85 +114,11 @@ public class TaskListRenderer {
     private List<TaskSection> groupInSections(List<Task> allTasks, CaseData caseData) {
         final Map<Event, Task> tasks = allTasks.stream().collect(toMap(Task::getEvent, identity()));
 
-        if (TASK_LIST_VERSION_V2.equalsIgnoreCase(caseData.getTaskListVersion())) {
-            final TaskSection applicationDetails = newSection(ADD_APPLICATION_DETAILS)
-                    .withTask(tasks.get(CASE_NAME))
-                    .withTask(tasks.get(TYPE_OF_APPLICATION))
-                    .withTask(tasks.get(HEARING_URGENCY));
-
-            final TaskSection peopleInTheCase = newSection(ADD_PEOPLE_TO_THE_CASE)
-                    .withInfo("If children live with another party in the case (other than the applicant or respondent) you can add these details to "
-                            + "'Other people in the case.' if you do complete this section, you must keep it up to date.")
-                    .withTask(tasks.get(CHILD_DETAILS_REVISED))
-                    .withTask(tasks.get(APPLICANT_DETAILS))
-                    .withTask(tasks.get(RESPONDENT_DETAILS))
-                    .withTask(tasks.get(OTHER_PEOPLE_IN_THE_CASE_REVISED))
-                    .withTask(tasks.get(OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION));
-
-            final TaskSection relationships = newSection("Relationships")
-                    .withTask(tasks.get(CHILDREN_AND_APPLICANTS))
-                    .withTask(tasks.get(CHILDREN_AND_RESPONDENTS))
-                    .withTask(tasks.get(CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION))
-                    .withErrors(List.of(EventValidationErrors
-                            .builder()
-                            .event(CHILD_DETAILS_REVISED)
-                            .errors(Collections.singletonList(EventErrorsEnum.CHILD_DETAILS_REVISED_ERROR.getError()))
-                            .build(),EventValidationErrors
-                            .builder()
-                            .event(APPLICANT_DETAILS)
-                            .errors(Collections.singletonList(EventErrorsEnum.APPLICANTS_DETAILS_ERROR.getError()))
-                            .build(),EventValidationErrors
-                            .builder()
-                            .event(RESPONDENT_DETAILS)
-                            .errors(Collections.singletonList(EventErrorsEnum.RESPONDENT_DETAILS_ERROR.getError()))
-                            .build(),EventValidationErrors
-                            .builder()
-                            .event(OTHER_PEOPLE_IN_THE_CASE_REVISED)
-                            .errors(Collections.singletonList(EventErrorsEnum.OTHER_PEOPLE_REVISED_ERROR.getError()))
-                            .build()));
-
-            final TaskSection requiredDetails = newSection("Add required details")
-                    .withTask(tasks.get(ALLEGATIONS_OF_HARM_REVISED));
-
-            final TaskSection miamDetails = newSection("MIAM details")
-                    .withInfo("MIAM section is optional for final submit, if a consent order is uploaded and mandatory otherwise.")
-                    .withTask(tasks.get(MIAM));
-
-            final TaskSection additionalInformation = newSection(ADD_ADDITIONAL_INFORMATION)
-                    .withInfo(ONLY_COMPLETE_IF_RELEVANT)
-                    .withTask(tasks.get(OTHER_PROCEEDINGS))
-                    .withTask(tasks.get(ATTENDING_THE_HEARING))
-                    .withTask(tasks.get(INTERNATIONAL_ELEMENT))
-                    .withTask(tasks.get(LITIGATION_CAPACITY))
-                    .withTask(tasks.get(WELSH_LANGUAGE_REQUIREMENTS));
-
-            final TaskSection pdfApplication = newSection("View PDF application")
-                    .withTask(tasks.get(VIEW_PDF_DOCUMENT));
-
-            final TaskSection submit;
-
-            if (caseData.getState().equals(AWAITING_RESUBMISSION_TO_HMCTS)) {
-                submit = newSection("Submit")
-                        .withTask(tasks.get(SUBMIT));
-            } else {
-                submit = newSection("Submit and pay")
-                        .withTask(tasks.get(SUBMIT_AND_PAY));
-            }
-
-            return Stream.of(applicationDetails,
-                            peopleInTheCase,
-                            relationships,
-                            requiredDetails,
-                            miamDetails,
-                            additionalInformation,
-                            pdfApplication,
-                            submit)
-                    .filter(TaskSection::hasAnyTask)
-                    .collect(toList());
-
+        if (TASK_LIST_VERSION_V3.equalsIgnoreCase(caseData.getTaskListVersion())) {
+            return generateTaskListV3(caseData, tasks);
+        } else if (TASK_LIST_VERSION_V2.equalsIgnoreCase(caseData.getTaskListVersion())) {
+            return generateTaskListV2(caseData, tasks);
         }
-
-
 
         final TaskSection applicationDetails = newSection(ADD_APPLICATION_DETAILS)
             .withTask(tasks.get(CASE_NAME))
@@ -198,11 +130,10 @@ public class TaskListRenderer {
             .withTask(tasks.get(CHILD_DETAILS))
             .withTask(tasks.get(RESPONDENT_DETAILS));
 
-        TaskSection  requiredDetails = newSection("Add required details")
+        TaskSection  requiredDetails = newSection(ADD_REQUIRED_DETAILS)
                 .withTask(tasks.get(ALLEGATIONS_OF_HARM));
 
-
-        final TaskSection miamDetails = newSection("MIAM details")
+        final TaskSection miamDetails = newSection(MIAM_DETAILS)
             .withInfo("MIAM section is optional for final submit, if a consent order is uploaded and mandatory otherwise.")
             .withTask(tasks.get(MIAM));
 
@@ -215,16 +146,16 @@ public class TaskListRenderer {
             .withTask(tasks.get(LITIGATION_CAPACITY))
             .withTask(tasks.get(WELSH_LANGUAGE_REQUIREMENTS));
 
-        final TaskSection pdfApplication = newSection("View PDF application")
+        final TaskSection pdfApplication = newSection(VIEW_PDF_APPLICATION)
             .withTask(tasks.get(VIEW_PDF_DOCUMENT));
 
         final TaskSection submit;
 
         if (caseData.getState().equals(AWAITING_RESUBMISSION_TO_HMCTS)) {
-            submit = newSection("Submit")
+            submit = newSection(SUBMIT1)
                 .withTask(tasks.get(SUBMIT));
         } else {
-            submit = newSection("Submit and pay")
+            submit = newSection(SUBMIT_AND_PAY_TEXT)
                 .withTask(tasks.get(SUBMIT_AND_PAY));
         }
 
@@ -236,7 +167,167 @@ public class TaskListRenderer {
                          pdfApplication,
                          submit)
             .filter(TaskSection::hasAnyTask)
-            .collect(toList());
+            .toList();
+    }
+
+    private static List<TaskSection> generateTaskListV2(CaseData caseData, Map<Event, Task> tasks) {
+        final TaskSection applicationDetails = newSection(ADD_APPLICATION_DETAILS)
+                .withTask(tasks.get(CASE_NAME))
+                .withTask(tasks.get(TYPE_OF_APPLICATION))
+                .withTask(tasks.get(HEARING_URGENCY));
+
+        final TaskSection peopleInTheCase = newSection(ADD_PEOPLE_TO_THE_CASE)
+                .withInfo("If children live with another party in the case (other than the applicant or respondent) you can add these details to "
+                        + "'Other people in the case.' if you do complete this section, you must keep it up to date.")
+                .withTask(tasks.get(CHILD_DETAILS_REVISED))
+                .withTask(tasks.get(APPLICANT_DETAILS))
+                .withTask(tasks.get(RESPONDENT_DETAILS))
+                .withTask(tasks.get(OTHER_PEOPLE_IN_THE_CASE_REVISED))
+                .withTask(tasks.get(OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION));
+
+        final TaskSection relationships = newSection("Relationships")
+                .withTask(tasks.get(CHILDREN_AND_APPLICANTS))
+                .withTask(tasks.get(CHILDREN_AND_RESPONDENTS))
+                .withTask(tasks.get(CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION))
+                .withErrors(List.of(EventValidationErrors
+                        .builder()
+                        .event(CHILD_DETAILS_REVISED)
+                        .errors(Collections.singletonList(EventErrorsEnum.CHILD_DETAILS_REVISED_ERROR.getError()))
+                        .build(),EventValidationErrors
+                        .builder()
+                        .event(APPLICANT_DETAILS)
+                        .errors(Collections.singletonList(EventErrorsEnum.APPLICANTS_DETAILS_ERROR.getError()))
+                        .build(),EventValidationErrors
+                        .builder()
+                        .event(RESPONDENT_DETAILS)
+                        .errors(Collections.singletonList(EventErrorsEnum.RESPONDENT_DETAILS_ERROR.getError()))
+                        .build(),EventValidationErrors
+                        .builder()
+                        .event(OTHER_PEOPLE_IN_THE_CASE_REVISED)
+                        .errors(Collections.singletonList(EventErrorsEnum.OTHER_PEOPLE_REVISED_ERROR.getError()))
+                        .build()));
+
+        final TaskSection requiredDetails = newSection(ADD_REQUIRED_DETAILS)
+                .withTask(tasks.get(ALLEGATIONS_OF_HARM_REVISED));
+
+        final TaskSection miamDetails = newSection(MIAM_DETAILS)
+                .withInfo("MIAM section is optional for final submit, if a consent order is uploaded and mandatory otherwise.")
+                .withTask(tasks.get(MIAM));
+
+        final TaskSection additionalInformation = newSection(ADD_ADDITIONAL_INFORMATION)
+                .withInfo(ONLY_COMPLETE_IF_RELEVANT)
+                .withTask(tasks.get(OTHER_PROCEEDINGS))
+                .withTask(tasks.get(ATTENDING_THE_HEARING))
+                .withTask(tasks.get(INTERNATIONAL_ELEMENT))
+                .withTask(tasks.get(LITIGATION_CAPACITY))
+                .withTask(tasks.get(WELSH_LANGUAGE_REQUIREMENTS));
+
+        final TaskSection pdfApplication = newSection(VIEW_PDF_APPLICATION)
+                .withTask(tasks.get(VIEW_PDF_DOCUMENT));
+
+        final TaskSection submit;
+
+        if (caseData.getState().equals(AWAITING_RESUBMISSION_TO_HMCTS)) {
+            submit = newSection(SUBMIT1)
+                    .withTask(tasks.get(SUBMIT));
+        } else {
+            submit = newSection(SUBMIT_AND_PAY_TEXT)
+                    .withTask(tasks.get(SUBMIT_AND_PAY));
+        }
+
+        return Stream.of(
+                applicationDetails,
+                peopleInTheCase,
+                relationships,
+                requiredDetails,
+                miamDetails,
+                additionalInformation,
+                pdfApplication,
+                submit
+            )
+            .filter(TaskSection::hasAnyTask)
+            .toList();
+    }
+
+    private static List<TaskSection> generateTaskListV3(CaseData caseData, Map<Event, Task> tasks) {
+        final TaskSection applicationDetails = newSection(ADD_APPLICATION_DETAILS)
+            .withTask(tasks.get(CASE_NAME))
+            .withTask(tasks.get(TYPE_OF_APPLICATION))
+            .withTask(tasks.get(HEARING_URGENCY));
+
+        final TaskSection peopleInTheCase = newSection(ADD_PEOPLE_TO_THE_CASE)
+            .withInfo("If children live with another party in the case (other than the applicant or respondent) you can add these details to "
+                          + "'Other people in the case.' if you do complete this section, you must keep it up to date.")
+            .withTask(tasks.get(CHILD_DETAILS_REVISED))
+            .withTask(tasks.get(APPLICANT_DETAILS))
+            .withTask(tasks.get(RESPONDENT_DETAILS))
+            .withTask(tasks.get(OTHER_PEOPLE_IN_THE_CASE_REVISED))
+            .withTask(tasks.get(OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION));
+
+        final TaskSection relationships = newSection("Relationships")
+            .withTask(tasks.get(CHILDREN_AND_APPLICANTS))
+            .withTask(tasks.get(CHILDREN_AND_RESPONDENTS))
+            .withTask(tasks.get(CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION))
+            .withErrors(List.of(EventValidationErrors
+                                    .builder()
+                                    .event(CHILD_DETAILS_REVISED)
+                                    .errors(Collections.singletonList(EventErrorsEnum.CHILD_DETAILS_REVISED_ERROR.getError()))
+                                    .build(),EventValidationErrors
+                                    .builder()
+                                    .event(APPLICANT_DETAILS)
+                                    .errors(Collections.singletonList(EventErrorsEnum.APPLICANTS_DETAILS_ERROR.getError()))
+                                    .build(),EventValidationErrors
+                                    .builder()
+                                    .event(RESPONDENT_DETAILS)
+                                    .errors(Collections.singletonList(EventErrorsEnum.RESPONDENT_DETAILS_ERROR.getError()))
+                                    .build(),EventValidationErrors
+                                    .builder()
+                                    .event(OTHER_PEOPLE_IN_THE_CASE_REVISED)
+                                    .errors(Collections.singletonList(EventErrorsEnum.OTHER_PEOPLE_REVISED_ERROR.getError()))
+                                    .build()));
+
+        final TaskSection requiredDetails = newSection(ADD_REQUIRED_DETAILS)
+            .withTask(tasks.get(ALLEGATIONS_OF_HARM_REVISED));
+
+        final TaskSection miamDetails = newSection(MIAM_DETAILS)
+            .withInfo("Mediation Information and Assessment Meeting (MIAM)"
+                          + " section is optional for final submission,"
+                          + " if a consent order is uploaded and mandatory otherwise.")
+            .withTask(tasks.get(MIAM_POLICY_UPGRADE));
+
+        final TaskSection additionalInformation = newSection(ADD_ADDITIONAL_INFORMATION)
+            .withInfo(ONLY_COMPLETE_IF_RELEVANT)
+            .withTask(tasks.get(OTHER_PROCEEDINGS))
+            .withTask(tasks.get(ATTENDING_THE_HEARING))
+            .withTask(tasks.get(INTERNATIONAL_ELEMENT))
+            .withTask(tasks.get(LITIGATION_CAPACITY))
+            .withTask(tasks.get(WELSH_LANGUAGE_REQUIREMENTS));
+
+        final TaskSection pdfApplication = newSection(VIEW_PDF_APPLICATION)
+            .withTask(tasks.get(VIEW_PDF_DOCUMENT));
+
+        final TaskSection submit;
+
+        if (caseData.getState().equals(AWAITING_RESUBMISSION_TO_HMCTS)) {
+            submit = newSection(SUBMIT1)
+                .withTask(tasks.get(SUBMIT));
+        } else {
+            submit = newSection(SUBMIT_AND_PAY_TEXT)
+                .withTask(tasks.get(SUBMIT_AND_PAY));
+        }
+
+        return Stream.of(
+                applicationDetails,
+                peopleInTheCase,
+                relationships,
+                requiredDetails,
+                miamDetails,
+                additionalInformation,
+                pdfApplication,
+                submit
+            )
+            .filter(TaskSection::hasAnyTask)
+            .toList();
     }
 
     private List<String> renderSection(TaskSection sec, CaseData caseData) {
@@ -258,7 +349,7 @@ public class TaskListRenderer {
                         APPLICANT_DETAILS.equals(eachError.getEvent()) ? !(eventsChecker.hasMandatoryCompleted(eachError.getEvent(), caseData)
                                     || eventsChecker.isFinished(eachError.getEvent(), caseData))
                                 : !eventsChecker.isFinished(eachError.getEvent(), caseData)
-            ).collect(toList())));
+            ).toList()));
         }
         return section;
     }
@@ -318,7 +409,7 @@ public class TaskListRenderer {
             .flatMap(task -> task.getErrors()
                 .stream()
                 .map(error -> format("%s in %s", error, taskListRenderElements.renderLink(task.getEvent()))))
-            .collect(toList());
+            .toList();
 
         return taskListRenderElements.renderCollapsible("Why can't I submit my application?", errors);
     }
@@ -331,7 +422,7 @@ public class TaskListRenderer {
                 .flatMap(task -> task.getErrors()
                         .stream()
                         .map(error -> format("%s to %s", error, taskListRenderElements.renderLink(task.getEvent()))))
-                .collect(toList());
+                .toList();
 
         return taskListRenderElements.renderCollapsible("Why can't I enter relationship details?", errors);
     }
@@ -392,6 +483,6 @@ public class TaskListRenderer {
                          uploadDocuments,
                          checkAndSignApplication)
             .filter(TaskSection::hasAnyTask)
-            .collect(toList());
+            .toList();
     }
 }
