@@ -4,101 +4,58 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
-import uk.gov.hmcts.reform.ccd.client.model.EventRequestData;
-import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 import uk.gov.hmcts.reform.prl.clients.ccd.CcdCoreCaseDataService;
 import uk.gov.hmcts.reform.prl.enums.CaseEvent;
-import uk.gov.hmcts.reform.prl.enums.PartyEnum;
-import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.mapper.citizen.CaseDataMapper;
-import uk.gov.hmcts.reform.prl.models.Element;
-import uk.gov.hmcts.reform.prl.models.UpdateCaseData;
-import uk.gov.hmcts.reform.prl.models.caseinvite.CaseInvite;
-import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
-import uk.gov.hmcts.reform.prl.models.complextypes.WithdrawApplication;
-import uk.gov.hmcts.reform.prl.models.complextypes.citizen.User;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildApplicantDetailsElements;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildData;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildRespondentDetailsElements;
+import uk.gov.hmcts.reform.prl.models.citizen.CaseDataWithHearingResponse;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.user.UserInfo;
 import uk.gov.hmcts.reform.prl.repositories.CaseRepository;
-import uk.gov.hmcts.reform.prl.services.SystemUserService;
-import uk.gov.hmcts.reform.prl.services.noticeofchange.NoticeOfChangePartiesService;
+import uk.gov.hmcts.reform.prl.services.RoleAssignmentService;
+import uk.gov.hmcts.reform.prl.services.cafcass.HearingService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
-import static java.util.Optional.ofNullable;
-import static org.apache.commons.collections.MapUtils.isNotEmpty;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_APPLICANTS;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
+import static org.apache.commons.lang3.StringUtils.isEmpty;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_DEFAULT_COURT_NAME;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_RESPONDENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_APPLICANTS;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_RESPONDENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JURISDICTION;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT_WITH_HWF;
-import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
-import static uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole.Representing.CAAPPLICANT;
-import static uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole.Representing.CARESPONDENT;
-import static uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole.Representing.DAAPPLICANT;
-import static uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole.Representing.DARESPONDENT;
-import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
+import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_UPDATE;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.wrapElements;
-
 
 @Slf4j
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class CaseService {
-
-    public static final String LINK_CASE = "linkCase";
-    public static final String INVALID = "Invalid";
-    public static final String VALID = "Valid";
-    public static final String LINKED = "Linked";
     public static final String YES = "Yes";
-    public static final String CASE_INVITES = "caseInvites";
-    @Autowired
     private final CoreCaseDataApi coreCaseDataApi;
-
-    @Autowired
     private final CaseRepository caseRepository;
-
     private final IdamClient idamClient;
-
-    @Autowired
     private final ObjectMapper objectMapper;
-
-    @Autowired
-    private final SystemUserService systemUserService;
-
-    @Autowired
     private final CaseDataMapper caseDataMapper;
+    private final RoleAssignmentService roleAssignmentService;
+    private final CcdCoreCaseDataService ccdCoreCaseDataService;
+    private final HearingService hearingService;
 
-    private final CcdCoreCaseDataService coreCaseDataService;
-
-    private final NoticeOfChangePartiesService noticeOfChangePartiesService;
-    private static final String INVALID_CLIENT = "Invalid Client";
-
-    public CaseDetails updateCase(CaseData caseData, String authToken, String s2sToken,
-                                  String caseId, String eventId, String accessCode) throws JsonProcessingException {
-        if (LINK_CASE.equalsIgnoreCase(eventId) && null != accessCode) {
-            linkCitizenToCase(authToken, s2sToken, caseId, accessCode);
-            return caseRepository.getCase(authToken, caseId);
-        }
+    public CaseDetails updateCase(CaseData caseData, String authToken,
+                                  String caseId, String eventId) throws JsonProcessingException {
         if (CITIZEN_CASE_SUBMIT.getValue().equalsIgnoreCase(eventId)
             || CITIZEN_CASE_SUBMIT_WITH_HWF.getValue().equalsIgnoreCase(eventId)) {
             UserDetails userDetails = idamClient.getUserDetails(authToken);
@@ -113,87 +70,51 @@ public class CaseService {
             CaseData updatedCaseData = caseDataMapper
                 .buildUpdatedCaseData(caseData.toBuilder().userInfo(wrapElements(userInfo))
                                           .courtName(C100_DEFAULT_COURT_NAME)
+                                          .taskListVersion(TASK_LIST_VERSION_V2)
                                           .build());
             return caseRepository.updateCase(authToken, caseId, updatedCaseData, CaseEvent.fromValue(eventId));
+        }
+        if (CITIZEN_CASE_UPDATE.getValue().equalsIgnoreCase(eventId)
+            && isEmpty(caseData.getApplicantCaseName())) {
+            caseData = caseData.toBuilder()
+                .applicantCaseName(buildApplicantAndRespondentForCaseName(caseData))
+                .build();
         }
 
         return caseRepository.updateCase(authToken, caseId, caseData, CaseEvent.fromValue(eventId));
     }
 
-    public CaseDetails updateCaseDetails(String authToken,
-                                         String caseId, String eventId, UpdateCaseData updateCaseData) {
-
-        CaseDetails caseDetails = caseRepository.getCase(authToken, caseId);
-        CaseData caseData = CaseUtils.getCaseData(caseDetails, objectMapper);
-        PartyDetails partyDetails = updateCaseData.getPartyDetails();
-        PartyEnum partyType = updateCaseData.getPartyType();
-        if (null != partyDetails.getUser()) {
-            if (C100_CASE_TYPE.equalsIgnoreCase(updateCaseData.getCaseTypeOfApplication())) {
-                updatingPartyDetailsCa(caseData, partyDetails, partyType);
-            } else {
-                caseData = getFlCaseData(caseData, partyDetails, partyType);
+    public String buildApplicantAndRespondentForCaseName(CaseData caseData) throws JsonProcessingException {
+        C100RebuildData c100RebuildData = caseData.getC100RebuildData();
+        ObjectMapper mapper = new ObjectMapper();
+        C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements = null;
+        C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements = null;
+        if (null != c100RebuildData) {
+            if (StringUtils.isNotEmpty(c100RebuildData.getC100RebuildApplicantDetails())) {
+                c100RebuildApplicantDetailsElements = mapper
+                    .readValue(c100RebuildData.getC100RebuildApplicantDetails(), C100RebuildApplicantDetailsElements.class);
             }
-            caseData = generateAnswersForNoc(caseData);
-            return caseRepository.updateCase(authToken, caseId, caseData, CaseEvent.fromValue(eventId));
-        } else {
-            throw (new RuntimeException(INVALID_CLIENT));
-        }
-    }
 
-    private CaseData generateAnswersForNoc(CaseData caseData) {
-        Map<String, Object> caseDataMap = caseData.toMap(objectMapper);
-        if (isNotEmpty(caseDataMap)) {
-            if (C100_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())) {
-                caseDataMap.putAll(noticeOfChangePartiesService.generate(caseData, CARESPONDENT));
-                caseDataMap.putAll(noticeOfChangePartiesService.generate(caseData, CAAPPLICANT));
-            } else {
-                caseDataMap.putAll(noticeOfChangePartiesService.generate(caseData, DARESPONDENT));
-                caseDataMap.putAll(noticeOfChangePartiesService.generate(caseData, DAAPPLICANT));
+            if (StringUtils.isNotEmpty(c100RebuildData.getC100RebuildRespondentDetails())) {
+                c100RebuildRespondentDetailsElements = mapper
+                    .readValue(c100RebuildData.getC100RebuildRespondentDetails(), C100RebuildRespondentDetailsElements.class);
             }
         }
-        caseData = objectMapper.convertValue(caseDataMap, CaseData.class);
-        return caseData;
+        return buildCaseName(c100RebuildApplicantDetailsElements, c100RebuildRespondentDetailsElements);
     }
 
-    private static CaseData getFlCaseData(CaseData caseData, PartyDetails partyDetails, PartyEnum partyType) {
-        if (PartyEnum.applicant.equals(partyType)) {
-            if (partyDetails.getUser().getIdamId().equalsIgnoreCase(caseData.getApplicantsFL401().getUser().getIdamId())) {
-                caseData = caseData.toBuilder().applicantsFL401(partyDetails).build();
-            }
-        } else {
-            if (partyDetails.getUser().getIdamId().equalsIgnoreCase(caseData.getRespondentsFL401().getUser().getIdamId())) {
-                caseData = caseData.toBuilder().respondentsFL401(partyDetails).build();
-            }
+
+    private String buildCaseName(C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements,
+                                 C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements) {
+        String caseName = null;
+        if (null != c100RebuildApplicantDetailsElements
+            && null != c100RebuildRespondentDetailsElements.getRespondentDetails()) {
+            caseName = c100RebuildApplicantDetailsElements.getApplicants().get(0).getApplicantLastName() + " V "
+                + c100RebuildRespondentDetailsElements.getRespondentDetails().get(0).getLastName();
         }
-        return caseData;
-    }
 
-    private static void updatingPartyDetailsCa(CaseData caseData, PartyDetails partyDetails, PartyEnum partyType) {
-        if (PartyEnum.applicant.equals(partyType)) {
-            List<Element<PartyDetails>> applicants = caseData.getApplicants();
-            applicants.stream()
-                .filter(party -> Objects.equals(
-                    party.getValue().getUser().getIdamId(),
-                    partyDetails.getUser().getIdamId()
-                ))
-                .findFirst()
-                .ifPresent(party ->
-                               applicants.set(applicants.indexOf(party), element(party.getId(), partyDetails))
-                );
-        } else if (PartyEnum.respondent.equals(partyType)) {
-            List<Element<PartyDetails>> respondents = caseData.getRespondents();
-            respondents.stream()
-                .filter(party -> Objects.equals(
-                    party.getValue().getUser().getIdamId(),
-                    partyDetails.getUser().getIdamId()
-                ))
-                .findFirst()
-                .ifPresent(party ->
-                               respondents.set(respondents.indexOf(party), element(party.getId(), partyDetails))
-                );
-        }
+        return caseName;
     }
-
 
     public List<CaseData> retrieveCases(String authToken, String s2sToken) {
 
@@ -213,7 +134,7 @@ public class CaseService {
         return caseDetails
             .stream()
             .map(caseDetail -> CaseUtils.getCaseData(caseDetail, objectMapper))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<CaseDetails> performSearch(String authToken, UserDetails user, Map<String, String> searchCriteria,
@@ -232,141 +153,6 @@ public class CaseService {
         return result;
     }
 
-    public void linkCitizenToCase(String authorisation, String s2sToken, String caseId, String accessCode) {
-        String anonymousUserToken = systemUserService.getSysUserToken();
-        CaseData currentCaseData = objectMapper.convertValue(
-            coreCaseDataApi.getCase(anonymousUserToken, s2sToken, caseId).getData(),
-            CaseData.class
-        );
-
-        if (VALID.equalsIgnoreCase(findAccessCodeStatus(accessCode, currentCaseData))) {
-            UUID partyId = null;
-            YesOrNo isApplicant = YesOrNo.Yes;
-
-            String systemUpdateUserId = systemUserService.getUserId(anonymousUserToken);
-            EventRequestData eventRequestData = coreCaseDataService.eventRequest(
-                CaseEvent.LINK_CITIZEN,
-                systemUpdateUserId
-            );
-            StartEventResponse startEventResponse =
-                coreCaseDataService.startUpdate(
-                    anonymousUserToken,
-                    eventRequestData,
-                    caseId,
-                    true
-                );
-
-            CaseData caseData = CaseUtils.getCaseDataFromStartUpdateEventResponse(
-                startEventResponse,
-                objectMapper
-            );
-            Map<String, Object> caseDataUpdated = new HashMap<>();
-            UserDetails userDetails = idamClient.getUserDetails(authorisation);
-            String userId = userDetails.getId();
-            String emailId = userDetails.getEmail();
-
-            for (Element<CaseInvite> invite : caseData.getCaseInvites()) {
-                if (accessCode.equals(invite.getValue().getAccessCode())) {
-                    partyId = invite.getValue().getPartyId();
-                    isApplicant = invite.getValue().getIsApplicant();
-                    invite.getValue().setHasLinked(YES);
-                    invite.getValue().setInvitedUserId(userId);
-                }
-            }
-            caseDataUpdated.put(CASE_INVITES, caseData.getCaseInvites());
-
-            processUserDetailsForCase(userId, emailId, caseData, partyId, isApplicant, caseDataUpdated);
-            caseRepository.linkDefendant(
-                authorisation,
-                anonymousUserToken,
-                caseId,
-                eventRequestData,
-                startEventResponse,
-                caseDataUpdated
-            );
-        }
-    }
-
-    private void processUserDetailsForCase(String userId, String emailId, CaseData caseData, UUID partyId,
-                                           YesOrNo isApplicant, Map<String, Object> caseDataUpdated) {
-        //Assumption is for C100 case PartyDetails will be part of list
-        // and will always contain the partyId
-        // whereas FL401 will have only one party details without any partyId
-        if (partyId != null) {
-            getValuesFromPartyDetails(caseData, partyId, isApplicant, userId, emailId, caseDataUpdated);
-        } else {
-            if (YesOrNo.Yes.equals(isApplicant)) {
-                User user = caseData.getApplicantsFL401().getUser().toBuilder().email(emailId)
-                    .idamId(userId).build();
-                caseData.getApplicantsFL401().setUser(user);
-                caseDataUpdated.put(FL401_APPLICANTS, caseData.getApplicantsFL401());
-            } else {
-                User user = caseData.getRespondentsFL401().getUser().toBuilder().email(emailId)
-                    .idamId(userId).build();
-                caseData.getRespondentsFL401().setUser(user);
-                caseDataUpdated.put(FL401_RESPONDENTS, caseData.getRespondentsFL401());
-
-            }
-        }
-    }
-
-    private void getValuesFromPartyDetails(CaseData caseData, UUID partyId, YesOrNo isApplicant, String userId,
-                                           String emailId, Map<String, Object> caseDataUpdated) {
-        if (YesOrNo.Yes.equals(isApplicant)) {
-            for (Element<PartyDetails> partyDetails : caseData.getApplicants()) {
-                if (partyId.equals(partyDetails.getId())) {
-                    User user = partyDetails.getValue().getUser().toBuilder().email(emailId)
-                        .idamId(userId).build();
-                    partyDetails.getValue().setUser(user);
-                }
-            }
-
-            caseDataUpdated.put(C100_APPLICANTS, caseData.getApplicants());
-        } else {
-            for (Element<PartyDetails> partyDetails : caseData.getRespondents()) {
-                if (partyId.equals(partyDetails.getId())) {
-                    User user = partyDetails.getValue().getUser().toBuilder().email(emailId)
-                        .idamId(userId).build();
-                    partyDetails.getValue().setUser(user);
-                }
-            }
-            caseDataUpdated.put(C100_RESPONDENTS, caseData.getRespondents());
-        }
-    }
-
-    public String validateAccessCode(String authorisation, String s2sToken, String caseId, String accessCode) {
-        CaseData caseData = objectMapper.convertValue(
-            coreCaseDataApi.getCase(authorisation, s2sToken, caseId).getData(),
-            CaseData.class
-        );
-        if (null == caseData) {
-            return INVALID;
-        }
-        return findAccessCodeStatus(accessCode, caseData);
-    }
-
-    private String findAccessCodeStatus(String accessCode, CaseData caseData) {
-        String accessCodeStatus = INVALID;
-        if (null == caseData.getCaseInvites() || caseData.getCaseInvites().isEmpty()) {
-            return accessCodeStatus;
-        }
-        List<CaseInvite> matchingCaseInvite = caseData.getCaseInvites()
-            .stream()
-            .map(Element::getValue)
-            .filter(x -> accessCode.equals(x.getAccessCode()))
-            .collect(Collectors.toList());
-
-        if (!matchingCaseInvite.isEmpty()) {
-            accessCodeStatus = VALID;
-            for (CaseInvite caseInvite : matchingCaseInvite) {
-                if (YES.equals(caseInvite.getHasLinked())) {
-                    accessCodeStatus = LINKED;
-                }
-            }
-        }
-        return accessCodeStatus;
-    }
-
     public CaseDetails getCase(String authToken, String caseId) {
         return caseRepository.getCase(authToken, caseId);
     }
@@ -375,21 +161,23 @@ public class CaseService {
         return caseRepository.createCase(authToken, caseData);
     }
 
-    public CaseDetails withdrawCase(CaseData caseData, String caseId, String authToken) {
-
-        WithdrawApplication withDrawApplicationData = caseData.getWithDrawApplicationData();
-        Optional<YesOrNo> withdrawApplication = ofNullable(withDrawApplicationData.getWithDrawApplication());
-        CaseDetails caseDetails = getCase(authToken, caseId);
-        CaseData updatedCaseData = objectMapper.convertValue(caseDetails.getData(), CaseData.class)
-            .toBuilder().id(caseDetails.getId()).build();
-
-        if ((withdrawApplication.isPresent() && Yes.equals(withdrawApplication.get()))) {
-            updatedCaseData = updatedCaseData.toBuilder()
-                .withDrawApplicationData(withDrawApplicationData)
-                .build();
-        }
-
-        return caseRepository.updateCase(authToken, caseId, updatedCaseData, CaseEvent.CITIZEN_CASE_WITHDRAW);
+    public Map<String, String> fetchIdamAmRoles(String authorisation, String emailId) {
+        return roleAssignmentService.fetchIdamAmRoles(authorisation, emailId);
     }
 
+    public CaseDataWithHearingResponse getCaseWithHearing(String authorisation, String caseId, String hearingNeeded) {
+        CaseDataWithHearingResponse caseDataWithHearingResponse = CaseDataWithHearingResponse.builder().build();
+        CaseDetails caseDetails = ccdCoreCaseDataService.findCaseById(authorisation, caseId);
+        CaseData caseData = CaseUtils.getCaseData(caseDetails, objectMapper);
+        caseData = caseData.toBuilder().noOfDaysRemainingToSubmitCase(
+            CaseUtils.getRemainingDaysSubmitCase(caseData)).build();
+        caseDataWithHearingResponse = caseDataWithHearingResponse.toBuilder().caseData(caseData).build();
+        if ("Yes".equalsIgnoreCase(hearingNeeded)) {
+            caseDataWithHearingResponse =
+                caseDataWithHearingResponse.toBuilder().hearings(
+                    hearingService.getHearings(authorisation, caseId)).build();
+        }
+
+        return caseDataWithHearingResponse;
+    }
 }
