@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.prl.services.hearings;
 
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,6 +11,7 @@ import uk.gov.hmcts.reform.prl.models.dto.hearingmanagement.NextHearingDetails;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.CaseHearing;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.CaseLinkedData;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.CaseLinkedRequest;
+import uk.gov.hmcts.reform.prl.models.dto.hearings.HearingDaySchedule;
 import uk.gov.hmcts.reform.prl.models.dto.hearings.Hearings;
 import uk.gov.hmcts.reform.prl.services.cafcass.RefDataService;
 
@@ -21,12 +21,10 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.EMPTY_STRING;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LISTED;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.nullSafeCollection;
-
 
 @Service
 @Slf4j
@@ -66,8 +64,8 @@ public class HearingService {
                 }
 
                 List<CaseHearing> sortedByLatest = hearings.getCaseHearings().stream()
-                    .sorted(Comparator.comparing(CaseHearing::getNextHearingDate, Comparator.nullsLast(Comparator.naturalOrder()))).collect(
-                        Collectors.toList());
+                    .sorted(Comparator.comparing(CaseHearing::getNextHearingDate, Comparator.nullsLast(Comparator.naturalOrder())))
+                    .toList();
 
                 hearings.setCaseHearings(sortedByLatest);
             }
@@ -85,7 +83,7 @@ public class HearingService {
         try {
             caseLinkedData = hearingApiClient.getCaseLinkedData(userToken, authTokenGenerator.generate(), caseLinkedRequest);
         } catch (Exception e) {
-            log.error(e.getMessage());
+            log.error("Error in getCaseLinkedData ", e);
         }
         return caseLinkedData;
     }
@@ -96,7 +94,7 @@ public class HearingService {
         try {
             return hearingApiClient.getNextHearingDate(userToken, authTokenGenerator.generate(), caseReferenceNumber);
         } catch (Exception e) {
-            log.error(e.getMessage());
+            log.error("Error in getNextHearingDate", e);
         }
         return null;
     }
@@ -115,15 +113,13 @@ public class HearingService {
     private LocalDateTime getNextHearingDateWithInHearing(CaseHearing hearing) {
 
         LocalDateTime nextHearingDate = null;
-        LocalDateTime tempNextDateListed = null;
         if (hearing.getHmcStatus().equals(LISTED)) {
             Optional<LocalDateTime> minDateOfHearingDaySche = nullSafeCollection(hearing.getHearingDaySchedule()).stream()
-                .filter(u -> u.getHearingStartDateTime().isAfter(LocalDateTime.now()))
-                .map(u -> u.getHearingStartDateTime())
+                .map(HearingDaySchedule::getHearingStartDateTime)
+                .filter(hearingStartDateTime -> hearingStartDateTime.isAfter(LocalDateTime.now()))
                 .min(LocalDateTime::compareTo);
-            if (minDateOfHearingDaySche.isPresent() && (tempNextDateListed == null || tempNextDateListed.isAfter(minDateOfHearingDaySche.get()))) {
-                tempNextDateListed = minDateOfHearingDaySche.get();
-                nextHearingDate = tempNextDateListed;
+            if (minDateOfHearingDaySche.isPresent()) {
+                nextHearingDate = minDateOfHearingDaySche.get();
             }
         }
         return nextHearingDate;
@@ -133,7 +129,7 @@ public class HearingService {
 
         LocalDateTime urgencyLimitDate = LocalDateTime.now().plusDays(5).plusMinutes(1).withNano(1);
         final List<String> hearingStatuses =
-            futureHearingStatusList.stream().map(String::trim).collect(Collectors.toList());
+            futureHearingStatusList.stream().map(String::trim).toList();
 
         boolean isInFutureHearingStatusList = hearingStatuses.stream()
             .anyMatch(
@@ -142,7 +138,7 @@ public class HearingService {
 
         return isInFutureHearingStatusList && hearing.getHmcStatus().equals(LISTED)
             && hearing.getHearingDaySchedule() != null
-            && hearing.getHearingDaySchedule().stream()
+            && !hearing.getHearingDaySchedule().stream()
             .filter(
                 hearDaySche ->
                     hearDaySche
@@ -156,8 +152,8 @@ public class HearingService {
                             .isBefore(
                                 urgencyLimitDate)
             )
-            .collect(Collectors.toList())
-            .size() > 0;
+            .toList()
+            .isEmpty();
 
     }
 
@@ -182,5 +178,40 @@ public class HearingService {
         return Collections.emptyMap();
     }
 
+    public List<Hearings> getHearingsByListOfCaseIds(String userToken, Map<String, String> caseIds) {
+
+        try {
+
+            List<Hearings> hearingsList = hearingApiClient.getHearingsByListOfCaseIds(userToken, authTokenGenerator.generate(), caseIds);
+            if (null != hearingsList) {
+                for (Hearings hearings : hearingsList) {
+                    Map<String, String> refDataCategoryValueMap = getRefDataMap(
+                        userToken,
+                        authTokenGenerator.generate(),
+                        hearings.getHmctsServiceCode(),
+                        hearingTypeCategoryId
+                    );
+
+                    for (CaseHearing eachHearing : hearings.getCaseHearings()) {
+                        eachHearing.setNextHearingDate(getNextHearingDateWithInHearing(eachHearing));
+                        eachHearing.setUrgentFlag(getUrgentFlagWithInHearing(eachHearing));
+                        eachHearing.setHearingTypeValue(getHearingTypeValueWithInHearing(eachHearing,refDataCategoryValueMap));
+                    }
+
+                    List<CaseHearing> sortedByLatest = hearings.getCaseHearings().stream()
+                        .sorted(Comparator.comparing(CaseHearing::getNextHearingDate,
+                                                     Comparator.nullsLast(Comparator.naturalOrder()))
+                        ).toList();
+
+                    hearings.setCaseHearings(sortedByLatest);
+                }
+            }
+            return hearingsList;
+
+        } catch (Exception e) {
+            log.error("Error in getting hearings ", e);
+        }
+        return Collections.emptyList();
+    }
 
 }
