@@ -1,14 +1,22 @@
 package uk.gov.hmcts.reform.prl.services.reviewdocument;
 
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
-import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
+import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
+import uk.gov.hmcts.reform.idam.client.models.UserDetails;
+import uk.gov.hmcts.reform.prl.clients.ccd.records.StartAllTabsUpdateDataContent;
+import uk.gov.hmcts.reform.prl.enums.CaseEvent;
+import uk.gov.hmcts.reform.prl.enums.Roles;
+import uk.gov.hmcts.reform.prl.enums.YesNoNotSure;
+import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.prl.models.complextypes.QuarantineLegalDoc;
@@ -16,28 +24,26 @@ import uk.gov.hmcts.reform.prl.models.complextypes.ScannedDocument;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.UploadedDocuments;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
-import uk.gov.hmcts.reform.prl.services.CoreCaseDataService;
+import uk.gov.hmcts.reform.prl.services.SystemUserService;
+import uk.gov.hmcts.reform.prl.services.managedocuments.ManageDocumentsService;
+import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
 import uk.gov.hmcts.reform.prl.utils.CommonUtils;
-import uk.gov.hmcts.reform.prl.utils.DocumentUtils;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
+import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.BULK_SCAN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_STAFF;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DATE_TIME_PATTERN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.D_MMM_YYYY;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HYPHEN_SEPARATOR;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JURISDICTION;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGAL_PROFESSIONAL;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR;
 import static uk.gov.hmcts.reform.prl.utils.CommonUtils.formatDateTime;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
@@ -47,33 +53,69 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class ReviewDocumentService {
 
-    @Autowired
-    CoreCaseDataService coreCaseDataService;
+    private final AllTabServiceImpl allTabService;
+    private final CaseDocumentClient caseDocumentClient;
+    private final AuthTokenGenerator authTokenGenerator;
+    private final SystemUserService systemUserService;
+    private final ManageDocumentsService manageDocumentsService;
 
+    private final ObjectMapper objectMapper;
     public static final String DOCUMENT_SUCCESSFULLY_REVIEWED = "# Document successfully reviewed";
     public static final String DOCUMENT_IN_REVIEW = "# Document review in progress";
     private static final String REVIEW_YES = "### You have successfully reviewed this document"
         + System.lineSeparator()
-        + "This document can only be seen by court staff, Cafcass and the judiciary. "
+        + "This document can only be seen by court staff and the judiciary. "
         + "You can view it in case file view and the confidential details tab.";
     private static final String REVIEW_NO = "### You have successfully reviewed this document"
         + System.lineSeparator()
         + " This document is visible to all parties and can be viewed in the case documents tab.";
     private static final String REVIEW_NOT_SURE = "### You need to confirm if the uploaded document needs to be restricted"
         + System.lineSeparator()
-        + "If you are not sure, you can use Send and reply to messages to get further information about whether "
+        + "If you are not sure, you can use %s to get further information about whether "
         + "the document needs to be restricted.";
+    public static final String LABEL_WITH_HINT =
+        "<h3 class='govuk-heading-s'>Document</h3><label class='govuk-label' for='more-detail'>"
+            + "<div id='more-detail-hint' class='govuk-hint'>The document will open in a new tab.</div></label>";
+    public static final String GOVUK_LIST_BULLET_LABEL = "<ul class='govuk-list govuk-list--bullet'><li>%s</li></ul></label>";
     public static final String SUBMITTED_BY_LABEL =
-        "<h3 class='govuk-heading-s'>Submitted by</h3><label class='govuk-label' for='more-detail'><li>%s</li></label>";
+        "<h3 class='govuk-heading-s'>Submitted by</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
     public static final String DOCUMENT_CATEGORY_LABEL =
-        "<h3 class='govuk-heading-s'>Document category</h3><label class='govuk-label' for='more-detail'><li>%s</li></label>";
+        "<h3 class='govuk-heading-s'>Document category</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
     public static final String DOCUMENT_COMMENTS_LABEL =
-        "<h3 class='govuk-heading-s'>Details/comments</h3><label class='govuk-label' for='more-detail'><li>%s</li></label>";
+        "<h3 class='govuk-heading-s'>Details/comments</h3><label class='govuk-label' for='more-detail'>"
+            + "<ul class='govuk-list govuk-list--bullet'> <li>%s</li></ul></label>";
+    public static final String  CONFIDENTIAL_INFO_LABEL =
+        "<h3 class='govuk-heading-s'>Confidential information included</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+
+    public static final String  RESTRICTED_INFO_LABEL =
+        "<h3 class='govuk-heading-s'>Request to restrict access</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+    public static final String  RESTRICTION_REASON_LABEL =
+        "<h3 class='govuk-heading-s'>Reasons to restrict access</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+
+    public static final String  BULK_SCAN_TYPE_LABEL =
+        "<h3 class='govuk-heading-s'>Type</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+    public static final String  BULK_SCAN_SUB_TYPE_LABEL =
+        "<h3 class='govuk-heading-s'>Sub type</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+    public static final String  BULK_SCAN_EXCEPTION_RECORD_REF_LABEL =
+        "<h3 class='govuk-heading-s'>Exception record reference</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+    public static final String  BULK_SCAN_SCANNED_DATE_LABEL =
+        "<h3 class='govuk-heading-s'>Scanned date</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+    public static final String  BULK_SCAN_DELIVERY_DATE_LABEL =
+        "<h3 class='govuk-heading-s'>Delivery date</h3><label class='govuk-label' for='more-detail'>"
+            + GOVUK_LIST_BULLET_LABEL;
+
     public static final String DOC_TO_BE_REVIEWED = "docToBeReviewed";
+    public static final String DOC_LABEL = "docLabel";
     public static final String REVIEW_DOC = "reviewDoc";
-    public static final String LEGAL_PROF_UPLOAD_DOC_LIST_CONF_TAB = "legalProfUploadDocListConfTab";
-    public static final String CAFCASS_UPLOAD_DOC_LIST_CONF_TAB = "cafcassUploadDocListConfTab";
-    public static final String COURT_STAFF_UPLOAD_DOC_LIST_CONF_TAB = "courtStaffUploadDocListConfTab";
     public static final String CITIZEN_UPLOAD_DOC_LIST_CONF_TAB = "citizenUploadDocListConfTab";
     public static final String BULKSCAN_UPLOAD_DOC_LIST_CONF_TAB = "bulkScannedDocListConfTab";
     public static final String LEGAL_PROF_UPLOAD_DOC_LIST_DOC_TAB = "legalProfUploadDocListDocTab";
@@ -82,49 +124,76 @@ public class ReviewDocumentService {
     public static final String CITIZEN_UPLOADED_DOC_LIST_DOC_TAB = "citizenUploadedDocListDocTab";
     public static final String BULKSCAN_UPLOADED_DOC_LIST_DOC_TAB = "bulkScannedDocListDocTab";
     public static final String CONFIDENTIAL_CATEGORY_ID = "confidential";
+    public static final String CONFIDENTIAL = "Confidential_";
+    public static final String CASE_DETAILS_URL = "/cases/case-details/";
+    public static final String SEND_AND_REPLY_URL = "/trigger/sendOrReplyToMessages/sendOrReplyToMessages1";
+    public static final String SEND_AND_REPLY_MESSAGE_LABEL = "\">Send and reply to messages</a>";
 
-    public List<DynamicListElement> getDynamicListElements(CaseData caseData) {
+    public List<DynamicListElement> fetchDocumentDynamicListElements(CaseData caseData, Map<String, Object> caseDataUpdated) {
+        List<Element<QuarantineLegalDoc>> tempQuarantineDocumentList = new ArrayList<>();
         List<DynamicListElement> dynamicListElements = new ArrayList<>();
-        if (CollectionUtils.isNotEmpty(caseData.getLegalProfQuarantineDocsList())) {
-            dynamicListElements.addAll(caseData.getLegalProfQuarantineDocsList().stream()
+        if (isNotEmpty(caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList())) {
+            dynamicListElements.addAll(caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList().stream()
                                            .map(element -> DynamicListElement.builder().code(element.getId().toString())
-                                               .label(element.getValue().getDocument().getDocumentFileName()
-                                                          + HYPHEN_SEPARATOR + formatDateTime(DATE_TIME_PATTERN,
-                                                                                   element.getValue().getDocumentUploadedDate()))
+                                               .label(manageDocumentsService.getQuarantineDocumentForUploader(
+                                                       element.getValue().getUploaderRole(),
+                                                       element.getValue()
+                                                   )
+                                                          .getDocumentFileName()
+                                                          + HYPHEN_SEPARATOR + formatDateTime(
+                                                   DATE_TIME_PATTERN,
+                                                   element.getValue().getDocumentUploadedDate()
+                                               ))
                                                .build())
                                            .toList());
+            tempQuarantineDocumentList.addAll(caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList());
         }
         //added for cafcass
-        if (CollectionUtils.isNotEmpty(caseData.getCafcassQuarantineDocsList())) {
-            dynamicListElements.addAll(caseData.getCafcassQuarantineDocsList().stream()
+        if (isNotEmpty(caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList())) {
+            dynamicListElements.addAll(caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList().stream()
                                            .map(element -> DynamicListElement.builder().code(element.getId().toString())
-                                               .label(element.getValue().getCafcassQuarantineDocument().getDocumentFileName()
-                                                          + HYPHEN_SEPARATOR + formatDateTime(DATE_TIME_PATTERN,
-                                                                                   element.getValue().getDocumentUploadedDate()))
+                                               .label(manageDocumentsService.getQuarantineDocumentForUploader(
+                                                       element.getValue().getUploaderRole(),
+                                                       element.getValue()
+                                                   )
+                                                          .getDocumentFileName()
+                                                          + HYPHEN_SEPARATOR + formatDateTime(
+                                                   DATE_TIME_PATTERN,
+                                                   element.getValue().getDocumentUploadedDate()
+                                               ))
                                                .build())
                                            .toList());
+            tempQuarantineDocumentList.addAll(caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList());
         }
         //court staff
-        if (CollectionUtils.isNotEmpty(caseData.getCourtStaffQuarantineDocsList())) {
-            dynamicListElements.addAll(caseData.getCourtStaffQuarantineDocsList().stream()
+        if (isNotEmpty(caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList())) {
+            dynamicListElements.addAll(caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList().stream()
                                            .map(element -> DynamicListElement.builder().code(element.getId().toString())
-                                               .label(element.getValue().getCourtStaffQuarantineDocument().getDocumentFileName()
-                                                          + HYPHEN_SEPARATOR + formatDateTime(DATE_TIME_PATTERN,
-                                                                                   element.getValue().getDocumentUploadedDate()))
+                                               .label(manageDocumentsService.getQuarantineDocumentForUploader(
+                                                       element.getValue().getUploaderRole(),
+                                                       element.getValue()
+                                                   )
+                                                          .getDocumentFileName()
+                                                          + HYPHEN_SEPARATOR + formatDateTime(
+                                                   DATE_TIME_PATTERN,
+                                                   element.getValue().getDocumentUploadedDate()
+                                               ))
                                                .build())
                                            .toList());
+            tempQuarantineDocumentList.addAll(caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList());
         }
-        if (CollectionUtils.isNotEmpty(caseData.getCitizenUploadQuarantineDocsList())) {
-            dynamicListElements.addAll(caseData.getCitizenUploadQuarantineDocsList().stream()
+        if (isNotEmpty(caseData.getDocumentManagementDetails().getCitizenUploadQuarantineDocsList())) {
+            dynamicListElements.addAll(caseData.getDocumentManagementDetails().getCitizenUploadQuarantineDocsList().stream()
                                            .map(element -> DynamicListElement.builder().code(element.getId().toString())
                                                .label(element.getValue().getCitizenDocument().getDocumentFileName()
                                                           + HYPHEN_SEPARATOR + CommonUtils.formatDate(
                                                    D_MMM_YYYY,
                                                    element.getValue().getDateCreated()
                                                ))
-                                               .build()).collect(Collectors.toList()));
+                                               .build()).toList());
+            //Handle Citizen Document management later
         }
-        if (CollectionUtils.isNotEmpty(caseData.getScannedDocuments())) {
+        if (isNotEmpty(caseData.getScannedDocuments())) {
             dynamicListElements.addAll(caseData.getScannedDocuments().stream()
                                            .map(element -> DynamicListElement.builder().code(element.getId().toString())
                                                .label(element.getValue().getFileName()
@@ -133,238 +202,113 @@ public class ReviewDocumentService {
                                                    D_MMM_YYYY,
                                                    element.getValue().getScannedDate().toLocalDate()
                                                ))
-                                               .build()).collect(Collectors.toList()));
+                                               .build()).toList());
+            tempQuarantineDocumentList.addAll(convertScannedDocumentsToQuarantineDocList(caseData.getScannedDocuments()));
         }
+        caseDataUpdated.put("tempQuarantineDocumentList", tempQuarantineDocumentList);
         return dynamicListElements;
     }
 
-    public void getReviewedDocumentDetails(CaseData caseData, Map<String, Object> caseDataUpdated) {
-        if (null != caseData.getReviewDocuments().getReviewDocsDynamicList() && null != caseData.getReviewDocuments()
-            .getReviewDocsDynamicList().getValue()) {
+    public void getReviewedDocumentDetailsNew(CaseData caseData, Map<String, Object> caseDataUpdated) {
+        if (null != caseData.getReviewDocuments().getReviewDocsDynamicList()
+            && null != caseData.getReviewDocuments().getReviewDocsDynamicList().getValue()) {
             UUID uuid = UUID.fromString(caseData.getReviewDocuments().getReviewDocsDynamicList().getValue().getCode());
             log.info("** uuid ** {}", uuid);
-            Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElement = Optional.empty();
-            if (null != caseData.getLegalProfQuarantineDocsList()) {
-                quarantineLegalDocElement = getQuarantineDocumentById(caseData.getLegalProfQuarantineDocsList(), uuid);
-            }
-            //cafcass quarantine doc
-            Optional<Element<QuarantineLegalDoc>> cafcassQuarantineDocElement = Optional.empty();
-            if (null != caseData.getCafcassQuarantineDocsList()) {
-                cafcassQuarantineDocElement = getQuarantineDocumentById(caseData.getCafcassQuarantineDocsList(), uuid);
-            }
-            //court staff
-            Optional<Element<QuarantineLegalDoc>> courtStaffQuarantineDocElement = Optional.empty();
-            if (null != caseData.getCourtStaffQuarantineDocsList()) {
-                courtStaffQuarantineDocElement = getQuarantineDocumentById(
-                    caseData.getCourtStaffQuarantineDocsList(),
-                    uuid
-                );
-            }
-            Optional<Element<UploadedDocuments>> quarantineCitizenDocElement = Optional.empty();
-            if (null != caseData.getCitizenUploadQuarantineDocsList()) {
-                quarantineCitizenDocElement = caseData.getCitizenUploadQuarantineDocsList().stream()
-                    .filter(element -> element.getId().equals(uuid)).findFirst();
-            }
+            List<Element<QuarantineLegalDoc>> tempQuarantineDocumentList = caseData.getDocumentManagementDetails().getTempQuarantineDocumentList();
+            Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElement =
+                getQuarantineDocumentById(tempQuarantineDocumentList, uuid);
 
-            if (quarantineLegalDocElement.isPresent()) {
-                updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
+            quarantineLegalDocElement.ifPresent(legalDocElement -> updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
                     caseDataUpdated,
-                    quarantineLegalDocElement,
-                    LEGAL_PROFESSIONAL
-                );
-            } else if (cafcassQuarantineDocElement.isPresent()) {
-                updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
-                    caseDataUpdated,
-                    cafcassQuarantineDocElement,
-                    CAFCASS
-                );
-            } else if (courtStaffQuarantineDocElement.isPresent()) {
-                updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
-                    caseDataUpdated,
-                    courtStaffQuarantineDocElement,
-                    COURT_STAFF
-                );
-            } else if (quarantineCitizenDocElement.isPresent()) {
-                UploadedDocuments document = quarantineCitizenDocElement.get().getValue();
-                log.info("** citizen document ** {}", document);
-
-                String docTobeReviewed = formatDocumentTobeReviewed(
-                    document.getPartyName(),
-                    document.getDocumentType(),
-                    ""
-                );
-
-                caseDataUpdated.put(DOC_TO_BE_REVIEWED, docTobeReviewed);
-                caseDataUpdated.put(REVIEW_DOC, document.getCitizenDocument());
-            }
-            if (CollectionUtils.isNotEmpty(caseData.getScannedDocuments())) {
-                Optional<Element<QuarantineLegalDoc>> quarantineBulkscanDocElement = Optional.empty();
-                quarantineBulkscanDocElement = Optional.of(
-                    element(QuarantineLegalDoc.builder()
-                                .url(caseData.getScannedDocuments().stream()
-                                         .filter(element -> element.getId().equals(uuid))
-                                         .collect(Collectors.toList()).get(0).getValue().getUrl()).build()));
-                if (quarantineBulkscanDocElement.isPresent()) {
-                    updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(
-                        caseDataUpdated,
-                        quarantineBulkscanDocElement,
-                        BULK_SCAN
-                    );
-                }
-            }
+                    legalDocElement,
+                    legalDocElement.getValue().getUploaderRole()
+            ));
         }
     }
 
     private void updateCaseDataUpdatedWithDocToBeReviewedAndReviewDoc(Map<String, Object> caseDataUpdated,
-                                                                      Optional<Element<QuarantineLegalDoc>> quarantineDocElement,
+                                                                      Element<QuarantineLegalDoc> quarantineDocElement,
                                                                       String submittedBy) {
 
-        QuarantineLegalDoc document = quarantineDocElement.get().getValue();
+        QuarantineLegalDoc quarantineLegalDoc = quarantineDocElement.getValue();
 
-        String docTobeReviewed = formatDocumentTobeReviewed(
-            submittedBy,
-            document.getCategoryName(),
-            document.getNotes()
-        );
+        String docTobeReviewed = formatDocumentTobeReviewed(submittedBy, quarantineLegalDoc);
 
         caseDataUpdated.put(DOC_TO_BE_REVIEWED, docTobeReviewed);
+        caseDataUpdated.put(DOC_LABEL,LABEL_WITH_HINT);
 
-        switch (submittedBy) {
-            case LEGAL_PROFESSIONAL:
-                caseDataUpdated.put(REVIEW_DOC, document.getDocument());
-                log.info(REVIEW_DOC + " {}", document.getDocument());
-                break;
-            case CAFCASS:
-                caseDataUpdated.put(REVIEW_DOC, document.getCafcassQuarantineDocument());
-                log.info(REVIEW_DOC + " {}", document.getCafcassQuarantineDocument());
-                break;
-            case COURT_STAFF:
-                caseDataUpdated.put(REVIEW_DOC, document.getCourtStaffQuarantineDocument());
-                log.info(REVIEW_DOC + " {}", document.getCourtStaffQuarantineDocument());
-                break;
-            case BULK_SCAN:
-                caseDataUpdated.put(REVIEW_DOC, document.getUrl());
-                log.info(REVIEW_DOC + " {}", document.getUrl());
-                break;
-            default:
-        }
-    }
-
-    private void uploadDocForConfOrDocTab(Map<String, Object> caseDataUpdated,
-                                          List<Element<QuarantineLegalDoc>> quarantineDocsList,
-                                          UUID uuid,
-                                          boolean isReviewDecisionYes,
-                                          List<Element<QuarantineLegalDoc>> uploadDocListConfOrDocTab,
-                                          String uploadDocListConfOrDocTabKey,
-                                          String uploadedBy) {
-
-        Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElementOptional =
-            getQuarantineDocumentById(quarantineDocsList, uuid);
-        if (quarantineLegalDocElementOptional.isPresent()) {
-            Element<QuarantineLegalDoc> quarantineLegalDocElement = quarantineLegalDocElementOptional.get();
-            //remove document from quarantine
-            quarantineDocsList.remove(quarantineLegalDocElement);
-
-            QuarantineLegalDoc uploadDoc = DocumentUtils.getQuarantineUploadDocument(
-                isReviewDecisionYes ? CONFIDENTIAL_CATEGORY_ID : quarantineLegalDocElement.getValue().getCategoryId(),
-                getQuarantineDocument(uploadedBy, quarantineLegalDocElement.getValue())
-            );
-
-            uploadDoc = addQuarantineDocumentFields(
-                uploadDoc,
-                quarantineLegalDocElement.getValue()
-            );
-
-            if (null != uploadDocListConfOrDocTab) {
-                uploadDocListConfOrDocTab.add(element(uploadDoc));
-                caseDataUpdated.put(
-                    uploadDocListConfOrDocTabKey,
-                    uploadDocListConfOrDocTab
-                );
-            } else {
-                caseDataUpdated.put(uploadDocListConfOrDocTabKey, List.of(element(uploadDoc)));
-            }
-        }
-    }
-
-    private Document getQuarantineDocument(String uploadedBy,
-                                           QuarantineLegalDoc quarantineLegalDoc) {
-        switch (uploadedBy) {
-            case SOLICITOR:
-                return quarantineLegalDoc.getDocument();
-
-            case CAFCASS:
-                return quarantineLegalDoc.getCafcassQuarantineDocument();
-
-            case COURT_STAFF:
-                return quarantineLegalDoc.getCourtStaffQuarantineDocument();
-
-            case BULK_SCAN:
-                return quarantineLegalDoc.getUrl();
-
-            default:
-                return null;
-        }
+        Document documentTobeReviewed = manageDocumentsService.getQuarantineDocumentForUploader(
+            submittedBy, quarantineLegalDoc);
+        caseDataUpdated.put(REVIEW_DOC, documentTobeReviewed);
     }
 
     public void processReviewDocument(Map<String, Object> caseDataUpdated, CaseData caseData, UUID uuid) {
-        if (YesNoDontKnow.yes.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
-            forReviewDecisionYes(caseData, caseDataUpdated, uuid);
-        } else if (YesNoDontKnow.no.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
-            forReviewDecisionNo(caseData, caseDataUpdated, uuid);
+        boolean isDocumentFound = false;
+        Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElementOptional;
+        if (YesNoNotSure.no.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())
+            || YesNoNotSure.yes.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
+            if (null != caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList()) {
+                quarantineLegalDocElementOptional =
+                    getQuarantineDocumentById(
+                        caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList(),
+                        uuid
+                    );
+                if (quarantineLegalDocElementOptional.isPresent()) {
+                    isDocumentFound = true;
+                    processDocumentsAfterReviewNew(
+                        caseData,
+                        caseDataUpdated,
+                        quarantineLegalDocElementOptional,
+                        UserDetails.builder().roles(List.of(Roles.SOLICITOR.getValue())).build(),
+                        SOLICITOR
+                    );
+
+                    removeDocumentFromQuarantineList(
+                        caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList(),
+                        uuid,
+                        caseDataUpdated,
+                        "legalProfQuarantineDocsList"
+                    );
+                }
+
+            }
+            isDocumentFound = processCafcassDocument(caseDataUpdated, caseData, uuid, isDocumentFound);
+
+            isDocumentFound = processCourtStaffQuarantineDocs(caseDataUpdated, caseData, uuid, isDocumentFound);
+
+            processCitizenUploadQuarantineDocs(caseDataUpdated, caseData, uuid, isDocumentFound);
+
+            if (!isDocumentFound && isNotEmpty(caseData.getScannedDocuments())) {
+                quarantineLegalDocElementOptional = getQuarantineBulkScanDocElement(caseData, uuid);
+                if (quarantineLegalDocElementOptional.isPresent()) {
+                    processDocumentsAfterReviewNew(
+                        caseData,
+                        caseDataUpdated,
+                        quarantineLegalDocElementOptional,
+                        UserDetails.builder().roles(List.of(Roles.BULK_SCAN.getValue())).build(),
+                        BULK_SCAN
+                    );
+                    removeFromScannedDocumentListAfterReview(caseDataUpdated, caseData, uuid);
+                }
+
+            }
         }
-        caseDataUpdated.put("legalProfQuarantineDocsList", caseData.getLegalProfQuarantineDocsList());
-        caseDataUpdated.put("cafcassQuarantineDocsList", caseData.getCafcassQuarantineDocsList());
-        caseDataUpdated.put("citizenUploadQuarantineDocsList", caseData.getCitizenUploadQuarantineDocsList());
-        caseDataUpdated.put("courtStaffQuarantineDocsList", caseData.getCourtStaffQuarantineDocsList());
-        caseDataUpdated.put("scannedDocuments", caseData.getScannedDocuments());
+
+
     }
 
-    private void forReviewDecisionYes(CaseData caseData, Map<String, Object> caseDataUpdated, UUID uuid) {
+    private static void processCitizenUploadQuarantineDocs(Map<String, Object> caseDataUpdated,
+                                                           CaseData caseData, UUID uuid, boolean isDocumentFound) {
+        if (!isDocumentFound && null != caseData.getDocumentManagementDetails().getCitizenUploadQuarantineDocsList()) {
 
-        if (null != caseData.getLegalProfQuarantineDocsList()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getLegalProfQuarantineDocsList(),
-                uuid,
-                true,
-                caseData.getReviewDocuments().getLegalProfUploadDocListConfTab(),
-                LEGAL_PROF_UPLOAD_DOC_LIST_CONF_TAB,
-                SOLICITOR
-            );
-        }
-        //cafcass
-        if (null != caseData.getCafcassQuarantineDocsList()) {
-
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getCafcassQuarantineDocsList(),
-                uuid,
-                true,
-                caseData.getReviewDocuments().getCafcassUploadDocListConfTab(),
-                CAFCASS_UPLOAD_DOC_LIST_CONF_TAB,
-                CAFCASS
-            );
-        }
-        //court staff
-        if (null != caseData.getCourtStaffQuarantineDocsList()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getCourtStaffQuarantineDocsList(),
-                uuid,
-                true,
-                caseData.getReviewDocuments().getCourtStaffUploadDocListConfTab(),
-                COURT_STAFF_UPLOAD_DOC_LIST_CONF_TAB,
-                COURT_STAFF
-            );
-        }
-        if (null != caseData.getCitizenUploadQuarantineDocsList()) {
-            Optional<Element<UploadedDocuments>> quarantineCitizenDocElementOptional = caseData.getCitizenUploadQuarantineDocsList().stream()
+            Optional<Element<UploadedDocuments>> quarantineCitizenDocElementOptional = caseData.getDocumentManagementDetails()
+                .getCitizenUploadQuarantineDocsList().stream()
                 .filter(element -> element.getId().equals(uuid)).findFirst();
             if (quarantineCitizenDocElementOptional.isPresent()) {
                 Element<UploadedDocuments> quarantineCitizenDocElement = quarantineCitizenDocElementOptional.get();
                 //remove from quarantine
-                caseData.getCitizenUploadQuarantineDocsList().remove(quarantineCitizenDocElement);
+                caseData.getDocumentManagementDetails().getCitizenUploadQuarantineDocsList().remove(
+                    quarantineCitizenDocElement);
 
                 if (null != caseData.getReviewDocuments().getCitizenUploadDocListConfTab()) {
                     caseData.getReviewDocuments().getCitizenUploadDocListConfTab().add(quarantineCitizenDocElement);
@@ -377,164 +321,195 @@ public class ReviewDocumentService {
                 }
             }
         }
-        if (null != caseData.getScannedDocuments()) {
+    }
 
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                convertScannedDocumentsToQuarantineDocList(caseData.getScannedDocuments(), uuid),
-                uuid,
-                true,
-                caseData.getReviewDocuments().getBulkScannedDocListConfTab(),
-                BULKSCAN_UPLOAD_DOC_LIST_CONF_TAB,
-                BULK_SCAN
-            );
-            removeFromScannedDocumentListAfterReview(caseData, uuid);
+    private boolean processCourtStaffQuarantineDocs(Map<String, Object> caseDataUpdated, CaseData caseData, UUID uuid, boolean isDocumentFound) {
+        Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElementOptional;
+        if (!isDocumentFound && null != caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList()) {
+            quarantineLegalDocElementOptional =
+                getQuarantineDocumentById(
+                    caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList(),
+                    uuid
+                );
+            if (quarantineLegalDocElementOptional.isPresent()) {
+                isDocumentFound = true;
+                processDocumentsAfterReviewNew(
+                    caseData,
+                    caseDataUpdated,
+                    quarantineLegalDocElementOptional,
+                    UserDetails.builder().roles(List.of(Roles.COURT_ADMIN.getValue())).build(),
+                    COURT_STAFF
+                );
+                removeDocumentFromQuarantineList(
+                    caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList(),
+                    uuid,
+                    caseDataUpdated,
+                    "courtStaffQuarantineDocsList"
+                );
+            }
+
+        }
+        return isDocumentFound;
+    }
+
+    private boolean processCafcassDocument(Map<String, Object> caseDataUpdated, CaseData caseData, UUID uuid, boolean isDocumentFound) {
+        Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElementOptional;
+        if (!isDocumentFound && null != caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList()) {
+            quarantineLegalDocElementOptional =
+                getQuarantineDocumentById(
+                    caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList(),
+                    uuid
+                );
+            if (quarantineLegalDocElementOptional.isPresent()) {
+                isDocumentFound = true;
+                processDocumentsAfterReviewNew(
+                    caseData,
+                    caseDataUpdated,
+                    quarantineLegalDocElementOptional,
+                    UserDetails.builder().roles(List.of(CAFCASS)).build(),
+                    CAFCASS
+                );
+                removeDocumentFromQuarantineList(
+                    caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList(),
+                    uuid,
+                    caseDataUpdated,
+                    "cafcassQuarantineDocsList"
+                );
+            }
+
+        }
+        return isDocumentFound;
+    }
+
+    private void removeDocumentFromQuarantineList(List<Element<QuarantineLegalDoc>> quarantineList, UUID uuid,
+                                                  Map<String, Object> caseDataUpdated, String caseDataObjectToBeModified) {
+        //new changes done
+        Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElementOptional =
+            getQuarantineDocumentById(quarantineList, uuid);
+        if (quarantineLegalDocElementOptional.isPresent()) {
+            Element<QuarantineLegalDoc> quarantineLegalDocElement = quarantineLegalDocElementOptional.get();
+            //remove document from quarantine
+            quarantineList.remove(quarantineLegalDocElement);
+            caseDataUpdated.put(caseDataObjectToBeModified, quarantineList);
         }
     }
 
-    private void removeFromScannedDocumentListAfterReview(
-        CaseData caseData, UUID uuid) {
-        caseData.getScannedDocuments().stream().forEach(sc ->
-                                                            log.info("scanned doc list id {}", sc.getId())
-        );
+    private void processDocumentsAfterReviewNew(CaseData caseData, Map<String, Object> caseDataUpdated,
+                                                Optional<Element<QuarantineLegalDoc>> quarantineLegalDocElementOptional,
+                                                UserDetails userDetails, String userRole) {
+        if (quarantineLegalDocElementOptional.isPresent()) {
+            QuarantineLegalDoc tempQuarantineDoe = quarantineLegalDocElementOptional.get().getValue();
+            if (YesNoNotSure.no.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
+                tempQuarantineDoe = tempQuarantineDoe.toBuilder()
+                    .isConfidential(null)
+                    .isRestricted(null)
+                    .restrictedDetails(null)
+                    .build();
+            }
+            manageDocumentsService.moveDocumentsToRespectiveCategoriesNew(
+                tempQuarantineDoe,
+                userDetails,
+                caseData,
+                caseDataUpdated,
+                userRole
+            );
+        }
+    }
+
+    private void removeFromScannedDocumentListAfterReview(Map<String, Object> caseDataUpdated,
+                                                          CaseData caseData, UUID uuid) {
         log.info("UUID is {}", uuid);
         Optional<Element<ScannedDocument>> scannedDocumentElement = caseData.getScannedDocuments().stream()
             .filter(element -> element.getId().equals(uuid)).findFirst();
         if (scannedDocumentElement.isPresent()) {
             log.info("removing document from scanned docs");
             caseData.getScannedDocuments().remove(scannedDocumentElement.get());
-            log.info("scanned documents after deletion {}", caseData.getScannedDocuments());
+            caseDataUpdated.put("scannedDocuments", caseData.getScannedDocuments());
         }
     }
 
     private List<Element<QuarantineLegalDoc>> convertScannedDocumentsToQuarantineDocList(
-        List<Element<ScannedDocument>> scannedDocumentElements, UUID uuid) {
-        List<Element<QuarantineLegalDoc>> quarantineLegalDocElementList = scannedDocumentElements.stream().map(
-            scannedDocumentElement -> {
-                ScannedDocument scannedDocument = scannedDocumentElement.getValue();
-                return element(uuid, QuarantineLegalDoc.builder()
-                    .fileName(scannedDocument.getFileName())
-                    .controlNumber(scannedDocument.getControlNumber())
-                    .type(scannedDocument.getType())
-                    .subtype(scannedDocument.getSubtype())
-                    .exceptionRecordReference(scannedDocument.getExceptionRecordReference())
-                    .url(scannedDocument.getUrl())
-                    //.document(scannedDocument.getUrl())
-                    .scannedDate(scannedDocument.getScannedDate())
-                    .deliveryDate(scannedDocument.getDeliveryDate())
-                    .build());
-
-
-            }).collect(Collectors.toList());
-        return quarantineLegalDocElementList;
+        List<Element<ScannedDocument>> scannedDocumentElements) {
+        return scannedDocumentElements.stream().map(
+                scannedDocumentElement -> {
+                    ScannedDocument scannedDocument = scannedDocumentElement.getValue();
+                    return element(scannedDocumentElement.getId(),
+                                   getBulkScanQuarantineDoc(scannedDocument)
+                            .build());
+                }).toList();
     }
 
-    private void forReviewDecisionNo(CaseData caseData, Map<String, Object> caseDataUpdated, UUID uuid) {
+    private static Optional<Element<QuarantineLegalDoc>> getQuarantineBulkScanDocElement(CaseData caseData, UUID uuid) {
 
-        if (null != caseData.getLegalProfQuarantineDocsList()) {
+        ScannedDocument scannedDocument = caseData.getScannedDocuments().stream()
+            .filter(element -> element.getId().equals(uuid))
+            .findFirst()
+            .map(Element::getValue)
+            .orElse(null);
 
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getLegalProfQuarantineDocsList(),
-                uuid,
-                false,
-                caseData.getReviewDocuments().getLegalProfUploadDocListDocTab(),
-                LEGAL_PROF_UPLOAD_DOC_LIST_DOC_TAB,
-                SOLICITOR
-            );
-
-            log.info("*** legal prof docs tab ** {}", caseDataUpdated.get(LEGAL_PROF_UPLOAD_DOC_LIST_DOC_TAB));
+        if (null != scannedDocument) {
+            return Optional.of(element(uuid, getBulkScanQuarantineDoc(scannedDocument).build()));
         }
-        //cafcass
-        if (null != caseData.getCafcassQuarantineDocsList()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getCafcassQuarantineDocsList(),
-                uuid,
-                false,
-                caseData.getReviewDocuments().getCafcassUploadDocListDocTab(),
-                CAFCASS_UPLOAD_DOC_LIST_DOC_TAB,
-                CAFCASS
-            );
+        return Optional.empty();
+    }
 
-            log.info("*** cafcass docs tab ** {}", caseDataUpdated.get(CAFCASS_UPLOAD_DOC_LIST_DOC_TAB));
-        }
-        //court staff
-        if (null != caseData.getCourtStaffQuarantineDocsList()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                caseData.getCourtStaffQuarantineDocsList(),
-                uuid,
-                false,
-                caseData.getReviewDocuments().getCourtStaffUploadDocListDocTab(),
-                COURT_STAFF_UPLOAD_DOC_LIST_DOC_TAB,
-                COURT_STAFF
-            );
-
-            log.info("*** court staff docs tab ** {}", caseDataUpdated.get(COURT_STAFF_UPLOAD_DOC_LIST_DOC_TAB));
-        }
-        if (null != caseData.getCitizenUploadQuarantineDocsList()) {
-            Optional<Element<UploadedDocuments>> quarantineCitizenDocElementOptional = caseData.getCitizenUploadQuarantineDocsList().stream()
-                .filter(element -> element.getId().equals(uuid)).findFirst();
-            if (quarantineCitizenDocElementOptional.isPresent()) {
-                Element<UploadedDocuments> quarantineCitizenDocElement = quarantineCitizenDocElementOptional.get();
-                //remove from quarantine
-                caseData.getCitizenUploadQuarantineDocsList().remove(quarantineCitizenDocElement);
-
-                if (null != caseData.getReviewDocuments().getCitizenUploadedDocListDocTab()) {
-                    caseData.getReviewDocuments().getCitizenUploadedDocListDocTab().add(quarantineCitizenDocElement);
-                    caseDataUpdated.put(
-                        CITIZEN_UPLOADED_DOC_LIST_DOC_TAB,
-                        caseData.getReviewDocuments().getCitizenUploadedDocListDocTab()
-                    );
-                } else {
-                    caseDataUpdated.put(CITIZEN_UPLOADED_DOC_LIST_DOC_TAB, List.of(quarantineCitizenDocElement));
-                }
-            }
-            log.info("*** citizen docs tab ** {}", caseDataUpdated.get(CITIZEN_UPLOADED_DOC_LIST_DOC_TAB));
-        }
-        // for bulk scan documents
-        if (null != caseData.getScannedDocuments()) {
-            uploadDocForConfOrDocTab(
-                caseDataUpdated,
-                convertScannedDocumentsToQuarantineDocList(caseData.getScannedDocuments(), uuid),
-                uuid,
-                false,
-                caseData.getReviewDocuments().getBulkScannedDocListDocTab(),
-                BULKSCAN_UPLOADED_DOC_LIST_DOC_TAB,
-                BULK_SCAN
-            );
-            removeFromScannedDocumentListAfterReview(caseData, uuid);
-            log.info("*** Bulk scan docs tab ** {}", caseDataUpdated.get(BULKSCAN_UPLOADED_DOC_LIST_DOC_TAB));
-        }
+    private static QuarantineLegalDoc.QuarantineLegalDocBuilder getBulkScanQuarantineDoc(ScannedDocument scannedDocument) {
+        return QuarantineLegalDoc.builder()
+            .fileName(scannedDocument.getFileName())
+            .controlNumber(scannedDocument.getControlNumber())
+            .type(scannedDocument.getType())
+            .subtype(scannedDocument.getSubtype())
+            .exceptionRecordReference(scannedDocument.getExceptionRecordReference())
+            .url(scannedDocument.getUrl())
+            .scannedDate(scannedDocument.getScannedDate())
+            .deliveryDate(scannedDocument.getDeliveryDate())
+            .documentParty(BULK_SCAN)
+            .uploadedBy(BULK_SCAN)
+            .documentUploadedDate(scannedDocument.getScannedDate())
+            .isConfidential(YesOrNo.Yes) //bulk scan docs always go to confidential if decision is Yes
+            .isRestricted(YesOrNo.No) //fix to getRestrictedOrConfidentialKey=confidential
+            .uploaderRole(BULK_SCAN);
     }
 
     public ResponseEntity<SubmittedCallbackResponse> getReviewResult(CaseData caseData) {
-        if (CollectionUtils.isEmpty(caseData.getLegalProfQuarantineDocsList())
-            && (CollectionUtils.isEmpty(caseData.getCourtStaffQuarantineDocsList()))
-            && CollectionUtils.isEmpty(caseData.getCitizenUploadQuarantineDocsList())
-            && CollectionUtils.isEmpty(caseData.getCafcassQuarantineDocsList())) {
-            coreCaseDataService.triggerEvent(
-                JURISDICTION,
-                CASE_TYPE,
-                caseData.getId(),
-                caseData.getCaseTypeOfApplication().equalsIgnoreCase(C100_CASE_TYPE)
-                    ? "c100-all-docs-reviewed" : "fl401-all-docs-reviewed",
-                null
+        if (CollectionUtils.isEmpty(caseData.getDocumentManagementDetails().getLegalProfQuarantineDocsList())
+            && (CollectionUtils.isEmpty(caseData.getDocumentManagementDetails().getCourtStaffQuarantineDocsList()))
+            && CollectionUtils.isEmpty(caseData.getDocumentManagementDetails().getCitizenUploadQuarantineDocsList())
+            && CollectionUtils.isEmpty(caseData.getDocumentManagementDetails().getCafcassQuarantineDocsList())
+            && CollectionUtils.isEmpty(caseData.getScannedDocuments())) {
+            StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = allTabService.getStartUpdateForSpecificEvent(
+                String.valueOf(
+                    caseData.getId()),
+                C100_CASE_TYPE.equals(caseData.getCaseTypeOfApplication())
+                    ? CaseEvent.C100_ALL_DOCS_REVIEWED.getValue() : CaseEvent.FL401_ALL_DOCS_REVIEWED.getValue()
             );
+            Map<String, Object> caseDataUpdated = startAllTabsUpdateDataContent.caseDataMap();
+            allTabService.submitAllTabsUpdate(
+                startAllTabsUpdateDataContent.authorisation(),
+                String.valueOf(caseData.getId()),
+                startAllTabsUpdateDataContent.startEventResponse(),
+                startAllTabsUpdateDataContent.eventRequestData(),
+                caseDataUpdated
+            );
+
         }
-        if (YesNoDontKnow.yes.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
+        if (YesNoNotSure.yes.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
             return ResponseEntity.ok(SubmittedCallbackResponse.builder()
                                          .confirmationHeader(DOCUMENT_SUCCESSFULLY_REVIEWED)
                                          .confirmationBody(REVIEW_YES).build());
-        } else if (YesNoDontKnow.no.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
+        } else if (YesNoNotSure.no.equals(caseData.getReviewDocuments().getReviewDecisionYesOrNo())) {
             return ResponseEntity.ok(SubmittedCallbackResponse.builder()
                                          .confirmationHeader(DOCUMENT_SUCCESSFULLY_REVIEWED)
                                          .confirmationBody(REVIEW_NO).build());
         } else {
+            String sendReplyLink = "<a href=\"" + CASE_DETAILS_URL
+                + caseData.getId()
+                + SEND_AND_REPLY_URL
+                + SEND_AND_REPLY_MESSAGE_LABEL;
             return ResponseEntity.ok(SubmittedCallbackResponse.builder()
                                          .confirmationHeader(DOCUMENT_IN_REVIEW)
-                                         .confirmationBody(REVIEW_NOT_SURE).build());
+                                         .confirmationBody(String.format(REVIEW_NOT_SURE, sendReplyLink))
+                                         .build());
         }
     }
 
@@ -545,38 +520,69 @@ public class ReviewDocumentService {
     }
 
     private String formatDocumentTobeReviewed(String submittedBy,
-                                              String category,
-                                              String notes) {
+                                              QuarantineLegalDoc quarantineDoc) {
+        StringBuilder reviewDetailsBuilder = new StringBuilder();
+        reviewDetailsBuilder.append(format(SUBMITTED_BY_LABEL, submittedBy));
+        //append quarantine document details for solicitor, cafcass & court staff
+        appendQuarantineDocumentDetails(reviewDetailsBuilder, quarantineDoc, submittedBy);
+
+        //PRL-5006 bulk scan fields
         if (BULK_SCAN.equals(submittedBy)) {
-            return String.join(
-                format(SUBMITTED_BY_LABEL, submittedBy)
-            );
+            appendBulkScanDocumentDetails(reviewDetailsBuilder, quarantineDoc);
         }
-        return String.join(
-            format(SUBMITTED_BY_LABEL, submittedBy),
-            format(DOCUMENT_CATEGORY_LABEL, category),
-            format(DOCUMENT_COMMENTS_LABEL, notes, "<br/>")
-        );
+        reviewDetailsBuilder.append("<br/>");
+        return reviewDetailsBuilder.toString();
     }
 
-    private QuarantineLegalDoc addQuarantineDocumentFields(QuarantineLegalDoc legalProfUploadDoc,
-                                                           QuarantineLegalDoc quarantineLegalDoc) {
+    private void appendQuarantineDocumentDetails(StringBuilder reviewDetailsBuilder,
+                                                 QuarantineLegalDoc quarantineDoc,
+                                                 String submittedBy) {
+        if (CommonUtils.isNotEmpty(quarantineDoc.getCategoryName())) {
+            reviewDetailsBuilder.append(format(DOCUMENT_CATEGORY_LABEL,
+                                               quarantineDoc.getCategoryName()));
+        }
+        if (CommonUtils.isNotEmpty(quarantineDoc.getNotes())) {
+            reviewDetailsBuilder.append(format(DOCUMENT_COMMENTS_LABEL,
+                                               quarantineDoc.getNotes()));
+        }
+        if (null != quarantineDoc.getIsConfidential() && !BULK_SCAN.equals(submittedBy)) {
+            reviewDetailsBuilder.append(format(CONFIDENTIAL_INFO_LABEL,
+                                               quarantineDoc.getIsConfidential().getDisplayedValue()));
+        }
+        if (null != quarantineDoc.getIsRestricted() && !BULK_SCAN.equals(submittedBy)) {
+            reviewDetailsBuilder.append(format(RESTRICTED_INFO_LABEL,
+                                               quarantineDoc.getIsRestricted().getDisplayedValue()));
+        }
+        if (CommonUtils.isNotEmpty(quarantineDoc.getRestrictedDetails())) {
+            reviewDetailsBuilder.append(format(RESTRICTION_REASON_LABEL,
+                                               quarantineDoc.getRestrictedDetails()));
+        }
+    }
 
-        return legalProfUploadDoc.toBuilder()
-            .documentParty(quarantineLegalDoc.getDocumentParty())
-            .documentUploadedDate(quarantineLegalDoc.getDocumentUploadedDate())
-            .notes(quarantineLegalDoc.getNotes())
-            .categoryId(quarantineLegalDoc.getCategoryId())
-            .categoryName(quarantineLegalDoc.getCategoryName())
-            .fileName(quarantineLegalDoc.getFileName())
-            .controlNumber(quarantineLegalDoc.getControlNumber())
-            .type(quarantineLegalDoc.getType())
-            .subtype(quarantineLegalDoc.getSubtype())
-            .exceptionRecordReference(quarantineLegalDoc.getExceptionRecordReference())
-            .url(legalProfUploadDoc.getConfidentialDocument() == null ? quarantineLegalDoc.getUrl() : null)
-            .scannedDate(quarantineLegalDoc.getScannedDate())
-            .deliveryDate(quarantineLegalDoc.getDeliveryDate())
-            .build();
+    private void appendBulkScanDocumentDetails(StringBuilder reviewDetailsBuilder,
+                                               QuarantineLegalDoc quarantineDoc) {
+        if (CommonUtils.isNotEmpty(quarantineDoc.getType())) {
+            reviewDetailsBuilder.append(format(BULK_SCAN_TYPE_LABEL,
+                                               quarantineDoc.getType()));
+        }
+        if (CommonUtils.isNotEmpty(quarantineDoc.getSubtype())) {
+            reviewDetailsBuilder.append(format(BULK_SCAN_SUB_TYPE_LABEL,
+                                               quarantineDoc.getSubtype()));
+        }
+        if (CommonUtils.isNotEmpty(quarantineDoc.getExceptionRecordReference())) {
+            reviewDetailsBuilder.append(format(BULK_SCAN_EXCEPTION_RECORD_REF_LABEL,
+                                               quarantineDoc.getExceptionRecordReference()));
+        }
+        if (null != quarantineDoc.getScannedDate()) {
+            reviewDetailsBuilder.append(format(BULK_SCAN_SCANNED_DATE_LABEL,
+                                               formatDateTime(DATE_TIME_PATTERN,
+                                                              quarantineDoc.getScannedDate())));
+        }
+        if (null != quarantineDoc.getDeliveryDate()) {
+            reviewDetailsBuilder.append(format(BULK_SCAN_DELIVERY_DATE_LABEL,
+                                               formatDateTime(DATE_TIME_PATTERN,
+                                                              quarantineDoc.getDeliveryDate())));
+        }
     }
 
 }
